--- a/exercises/09_03_exercises.tex
+++ b/exercises/09_03_exercises.tex
@@ -9,5 +9,7 @@
 \exsetinput{exercises/09_03_exset_03}
 \exsetinput{exercises/09_03_exset_04}
 \exsetinput{exercises/09_03_exset_05}
+\exsetinput{exercises/09_03_exset_08}
 \exsetinput{exercises/09_03_exset_06}
+\ifthenelse{\boolean{printquestions}}{\columnbreak}{}
 \exsetinput{exercises/09_03_exset_07}
