--- a/exercises/06_03_exercises.tex
+++ b/exercises/06_03_exercises.tex
@@ -4,9 +4,8 @@
 \exinput{exercises/06_03_ex_03}
 \printproblems
 \exsetinput{exercises/06_03_exset_01}
-\columnbreak
+\ifthenelse{\boolean{printquestions}}{\columnbreak}{}
 \exsetinput{exercises/06_03_exset_02}
-%\columnbreak
 \exsetinput{exercises/06_03_exset_03}
 %\printreview
 %\exsetinput{exercises/05_04_exset_07}
