--- a/Calculus.tex
+++ b/Calculus.tex
@@ -53,6 +53,8 @@
 	{}
 \makeindex
 
+\numberwithin{examplecounter}{chapter}
+
 %\renewcommand{\contentsname}{Contents of Calculus I \& II}
 
 %%%\tracingonline=1
