--- a/CalculusII.tex
+++ b/CalculusII.tex
@@ -54,6 +54,8 @@
 
 \makeindex
 
+\numberwithin{examplecounter}{chapter}
+
 %%%\tracingonline=1
 \begin{document}
 
@@ -131,8 +133,8 @@
 \addtocounter{theoremcounter}{-1}
 \setcounterref{keyideacounter}{lastideacount1}
 \addtocounter{keyideacounter}{-1}
-\setcounterref{examplecounter}{lastexamplecount1}
-\addtocounter{examplecounter}{-1}
+%\setcounterref{examplecounter}{lastexamplecount1}
+%\addtocounter{examplecounter}{-1}
 \setcounter{page}{300}
 %\thispagestyle{empty}
 
