--- a/CalculusIII.tex
+++ b/CalculusIII.tex
@@ -80,6 +80,8 @@
 	
 	\makeindex
 
+\numberwithin{examplecounter}{chapter}
+
 
 %%%\tracingonline=1
 \begin{document}
@@ -214,8 +216,8 @@
 \addtocounter{theoremcounter}{-1}
 \setcounterref{keyideacounter}{lastideacount2}
 \addtocounter{keyideacounter}{-1}
-\setcounterref{examplecounter}{lastexamplecount2}
-\addtocounter{examplecounter}{-1}
+%\setcounterref{examplecounter}{lastexamplecount2}
+%\addtocounter{examplecounter}{-1}
 %\clearpage{\pagestyle{empty}\cleardoublepage}
 %%%\setcounterref{definitioncounter}{lastdefcount1}
 %%%\addtocounter{definitioncounter}{-1}
