--- a/exercises/03_04_ex_55.tex
+++ b/exercises/03_04_ex_55.tex
@@ -1,4 +1,4 @@
-{T/F: The First Derivative Test can always be used to determine if a critical point is a relative minimum, relative maximum, or neither.
+{T/F: For a differentiable function, the First Derivative Test can always be used to determine if a critical point is a relative minimum, relative maximum, or neither.
 }
 {T
 }
