--- a/exercises/06_04_exset_01.tex
+++ b/exercises/06_04_exset_01.tex
@@ -9,6 +9,9 @@
 \exinput{exercises/06_04_ex_13}
 \exinput{exercises/06_04_ex_14}
 \exinput{exercises/06_04_ex_15}
+\exinput{exercises/06_04_ex_34}
+\exinput{exercises/06_04_ex_35}
+\exinput{exercises/06_04_ex_36}
 \exinput{exercises/06_04_ex_16}
 \exinput{exercises/06_04_ex_17}
 \exinput{exercises/06_04_ex_18}
