--- a/exercises/07_02_exercises.tex
+++ b/exercises/07_02_exercises.tex
@@ -8,3 +8,5 @@
 \exsetinput{exercises/07_02_exset_03}
 \ifthenelse{\boolean{printquestions}}{\columnbreak}{}
 \exsetinput{exercises/07_02_exset_04}
+\exinput{exercises/07_02_ex_23}
+\exinput{exercises/07_02_ex_22}
