--- a/text/06_Hyperbolic_Functions.tex
+++ b/text/06_Hyperbolic_Functions.tex
@@ -212,7 +212,7 @@ $$\sinh(\ln 2) = \frac{e^{\ln 2}-e^{-\ln 2}}2 = \frac{2-1/2}{2} = \frac34.$$
 Just as the inverse trigonometric functions are useful in certain integrations, the inverse hyperbolic functions are useful with others. Figure \ref{fig:hfinverse2} shows the restrictions on the domains to make each function one-to-one and the resulting domains and ranges of their inverse functions. Their graphs are shown in Figure \ref{fig:hfinverse1}.\index{hyperbolic function!inverse}
 
 Because the hyperbolic functions are defined in terms of exponential functions, their inverses can be expressed in terms of logarithms as shown in Key Idea \ref{idea:hyperbolic_log}. It is often more convenient to refer to $\sinh^{-1}x$ than to $\ln\big(x+\sqrt{x^2+1}\big)$, especially when one is working on theory and does not need to compute actual values. On the other hand, when computations are needed, technology is often helpful but many hand-held calculators lack a \textit{convenient} $\sinh^{-1}x$ button. (Often it can be accessed under a menu system, but not conveniently.) In such a situation, the logarithmic representation is useful. The reader is not encouraged to memorize these, but rather know they exist and know how to use them when needed.
-\clearpage
+%\clearpage
 
 
 %\mtable{.7}{Graphs of $\cosh x$, $\sinh x$ and their inverses.}{fig:hfinverse3}{\myincludegraphics{figures/fighfarccosh} \vskip 10pt\myincludegraphics{figures/fighfarcsinh}}
@@ -221,7 +221,7 @@ Because the hyperbolic functions are defined in terms of exponential functions, 
 
 %\clearpage
 
-\hskip-.5\textwidth
+%\hskip-.5\textwidth
 \noindent\begin{minipage}{1.3\textwidth}
 %\centering
 \small
@@ -254,7 +254,7 @@ $\csch^{-1} x$ & $(-\infty,0) \cup (0,\infty)$ & $(-\infty,0) \cup (0,\infty)$
 \end{minipage}
 \enlargethispage{3\baselineskip}
 
-\hskip-100pt
+%\hskip-100pt
 \noindent
 \begin{minipage}{1.3\textwidth}
 \begin{tabular}{ccc}
@@ -304,7 +304,7 @@ The following Key Ideas give the derivatives and integrals relating to the inver
 %}
 
 \setboxwidth{120pt}
-\noindent%\hskip -120pt%
+\noindent\hskip -120pt%
 \begin{minipage}{\specialboxlength}
 \keyidea{idea:hyperbolic_inverse_derivatives}{Derivatives Involving Inverse Hyperbolic Functions}
 {%
@@ -351,7 +351,7 @@ The following Key Ideas give the derivatives and integrals relating to the inver
 \\
 
 We practice using the derivative and integral formulas in the following example.\\
-\clearpage
+%\clearpage
 
 \example{ex_hf3}{Derivatives and integrals involving inverse hyperbolic functions}
 {Evaluate the following.
