--- a/exercises/02_03_ex_01.tex
+++ b/exercises/02_03_ex_01.tex
@@ -1,4 +1,4 @@
-{What is the name of the rule which states that $\ds \frac{d}{dx}\big(x^n\big) = nx^{n-1}$, where $n>0$ is an integer?
+{What is the name of the rule which states that $\ds \frac{d}{dx}\big(x^n\big) = nx^{n-1}$?
 }
 {Power Rule.
 }
