--- a/exercises/05_01_exset_02.tex
+++ b/exercises/05_01_exset_02.tex
@@ -3,6 +3,7 @@
 \exinput{exercises/05_01_ex_28}
 \exinput{exercises/05_01_ex_29}
 \exinput{exercises/05_01_ex_30}
+\exinput{exercises/05_01_ex_27}
 \exinput{exercises/05_01_ex_31}
 \exinput{exercises/05_01_ex_32}
 \exinput{exercises/05_01_ex_43}
