--- a/exercises/06_04_exset_02.tex
+++ b/exercises/06_04_exset_02.tex
@@ -2,6 +2,7 @@
 {, evaluate the definite integral.}
 \exinput{exercises/06_04_ex_26}
 \exinput{exercises/06_04_ex_27}
+\exinput{exercises/06_04_ex_37}
 \exinput{exercises/06_04_ex_28}
 \exinput{exercises/06_04_ex_29}
 \exinput{exercises/06_04_ex_33}
