--- a/exercises/09_03_exercises.tex
+++ b/exercises/09_03_exercises.tex
@@ -10,6 +10,8 @@
 \exsetinput{exercises/09_03_exset_04}
 \exsetinput{exercises/09_03_exset_05}
 \exsetinput{exercises/09_03_exset_08}
+\exinput{exercises/09_03_ex_46}
+\exinput{exercises/09_03_ex_48}
 \exsetinput{exercises/09_03_exset_06}
-\ifthenelse{\boolean{printquestions}}{\columnbreak}{}
+%\ifthenelse{\boolean{printquestions}}{\columnbreak}{}
 \exsetinput{exercises/09_03_exset_07}
