--- a/exercises/10_01_exercises.tex
+++ b/exercises/10_01_exercises.tex
@@ -8,8 +8,17 @@
 \printproblems
 \exinput{exercises/10_01_ex_06}
 \exinput{exercises/10_01_ex_07}
+\exinput{exercises/10_01_ex_33}
+\exinput{exercises/10_01_ex_34}
+\exinput{exercises/10_01_ex_35}
 \exinput{exercises/10_01_ex_09}
 \exinput{exercises/10_01_ex_10}
+\exinput{exercises/10_01_ex_36}
+\exinput{exercises/10_01_ex_37}
+\exinput{exercises/10_01_ex_38}
+\exinput{exercises/10_01_ex_39}
+\exinput{exercises/10_01_ex_40}
+\exinput{exercises/10_01_ex_41}
 \exsetinput{exercises/10_01_exset_01}
 \exsetinput{exercises/10_01_exset_02}
 \exsetinput{exercises/10_01_exset_05}
