--- a/exercises/10_02_ex_27.tex
+++ b/exercises/10_02_ex_27.tex
@@ -1,9 +1,9 @@
-{Verify, from Key Idea \ref{idea:unit_vectors}, that $\vec u=\la \sin\theta\cos\varphi,\sin\theta\sin\varphi,\cos\theta\ra$ is a unit vector for all angles $\theta$ and $\varphi$.
+{Verify, from Key Idea \ref{idea:unit_vectors}, that $\vec u=\la \sin\varphi\cos\theta,\sin\varphi\sin\theta,\cos\varphi\ra$ is a unit vector for all angles $\varphi$ and $\theta$.
 }
 {\begin{align*}
-\norm{\vec u} &= \sqrt{\sin^2\theta\cos^2\varphi+\sin^2\theta\sin^2\varphi+\cos^2\theta}\\
-						&= \sqrt{\sin^2\theta(\cos^2\varphi+\sin^2\varphi)+\cos^2\theta}\\
-						&= \sqrt{\sin^2\theta+\cos^2\theta}\\
+\norm{\vec u} &= \sqrt{\sin^2\varphi\cos^2\theta+\sin^2\varphi\sin^2\theta+\cos^2\varphi}\\
+						&= \sqrt{\sin^2\varphi(\cos^2\theta+\sin^2\theta)+\cos^2\varphi}\\
+						&= \sqrt{\sin^2\varphi+\cos^2\varphi}\\
 						&=1.
 \end{align*}
 }
