yet another 6.4 problem added

--- a/exercises/06_04_exset_01.tex
+++ b/exercises/06_04_exset_01.tex
@@ -20,6 +20,7 @@
 \exinput{exercises/06_04_ex_21}
 \exinput{exercises/06_04_ex_22}
 \exinput{exercises/06_04_ex_23}
+\exinput{exercises/06_04_ex_38}
 \exinput{exercises/06_04_ex_24}
 \exinput{exercises/06_04_ex_25}
 \exinput{exercises/06_04_ex_30}
